[package]
name = "rust-streamscript"
version = "0.1.0"
authors = ["maxwell houlditch <max@houlditch.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
clap = "2.33.3"
reqwest = { version = "0.11", features=["blocking"] }
futures = "0.3"
